@@ -5,6 +5,9 @@ chromium-browser (5.0.370.0~svn20100405r43596-0ubuntu1) UNRELEASED; urgency=low
     - update debian/rules
   * Install resources/{bookmark_manager,net_internals} in the main deb
     - update debian/chromium-browser.install
+  * When 'gclient update' fails, clear up the cache and retry. This helps
+    the channels updates often failing with a "Can't switch the checkout" error
+    - update debian/rules
 
  -- Fabien Tassin <fta@ubuntu.com>  Mon, 05 Apr 2010 04:00:02 +0200
 
